...

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/signInButtonMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToSignIn"
            android:text="Sign In" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/SignUpButtonMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToSignUp"
            android:text="Sign Up" />

        <Space
...
