<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold|italic"
            android:textColor="#21618C"
            android:id="@+id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign Up"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:textColor="#3498DB"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Password need to be at least 6 characters long!"
            android:textSize="12sp" />

        <TextView
            android:textColor="#EA4A4A "
            android:id="@+id/ErrorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:textColor="#3498DB"
            android:id="@+id/UsernameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Username" />

        <EditText
            android:id="@+id/usernamefield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_vertical"
            android:ems="10"
            android:gravity="center"
            android:hint="Username "
            android:inputType="textPersonName" />

        <TextView
            android:textColor="#3498DB"
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Password" />

        <EditText
            android:id="@+id/passwordfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="abc123"
            android:inputType="textPassword" />

        <TextView
            android:textColor="#3498DB"
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Name" />

        <EditText
            android:id="@+id/namefield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_vertical"
            android:ems="10"
            android:gravity="center"
            android:hint="John"
            android:inputType="textPersonName" />

        <TextView
            android:textColor="#3498DB"
            android:id="@+id/familyNameview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Family Name" />

        <EditText
            android:id="@+id/familyNamefield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_vertical"
            android:ems="10"
            android:gravity="center"
            android:hint="Doe"
            android:inputType="textPersonName" />

        <TextView
            android:textColor="#3498DB"
            android:id="@+id/EmailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Email" />

        <EditText
            android:id="@+id/emailfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_vertical"
            android:ems="10"
            android:gravity="center"
            android:hint="JohnDoe@connect.ca"
            android:inputType="textPersonName" />

        <TextView
            android:textColor="#3498DB"
            android:id="@+id/PatientorEmployeeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Patient or Employee " />

        <Spinner
            android:id="@+id/roleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/roleChoices"
            android:gravity="center"
            android:textAlignment="gravity" />

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_vertical"
            android:gravity="center"
            android:onClick="onCreateClick"
            android:text="create" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>